# pekko-agent

./: .env.example  .gitignore  BUILD.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CRATES_SUMMARY.md  Cargo.toml  FILES_CREATED.txt  FILE_MANIFEST.txt  IMPLEMENTATION_STATUS.md  MSA_실전교재_pekko-agent.docx  README.md  README_DELIVERABLES.md  STRUCTURE.md  USAGE_EXAMPLES.md  docker-compose-local.yml  docker-compose.yml  post_capabilities_to_notion.py
.github/workflows/: ci.yml
crates/pekko-agent-cache/: Cargo.toml
crates/pekko-agent-cache/src/: lib.rs
crates/pekko-agent-core/: Cargo.toml
crates/pekko-agent-core/src/: agent.rs  error.rs  lib.rs  memory.rs  message.rs  state.rs  tool.rs
crates/pekko-agent-events/: Cargo.toml
crates/pekko-agent-events/src/: consumer.rs  lib.rs  publisher.rs  schema.rs
crates/pekko-agent-llm/: Cargo.toml
crates/pekko-agent-llm/src/: circuit_breaker.rs  client.rs  embedding.rs  gateway.rs  gemini_client.rs  lib.rs  openai_client.rs  types.rs
crates/pekko-agent-memory/: Cargo.toml
crates/pekko-agent-memory/src/: conversation.rs  coredb_conversation.rs  coredb_episodic.rs  coredb_journal.rs  episodic.rs  lib.rs  pg_conversation.rs  pg_vector_store.rs  vector_store.rs
crates/pekko-agent-observability/: Cargo.toml
crates/pekko-agent-observability/src/: lib.rs  metrics.rs  tracing.rs
crates/pekko-agent-orchestrator/: Cargo.toml
crates/pekko-agent-orchestrator/src/: lib.rs  orchestrator.rs  persistence.rs  saga.rs  workflow.rs
crates/pekko-agent-security/: Cargo.toml
crates/pekko-agent-security/src/: api_keys.rs  audit.rs  jwt.rs  lib.rs  pg_audit.rs  rate_limiter.rs  rbac.rs  tenant.rs
crates/pekko-agent-tools/: Cargo.toml
crates/pekko-agent-tools/src/: lib.rs  mcp.rs  registry.rs
crates/pekko-agent-tools/src/builtin/: compliance_check.rs  ehs_query.rs  mod.rs  permit_search.rs
crates/pekko-agent-webhooks/: Cargo.toml
crates/pekko-agent-webhooks/src/: lib.rs
docs/: pekko-agent-ehs-agentic-ai-design.docx
frontend/web-chat/: Cargo.toml  Trunk.toml  index.html
frontend/web-chat/src/: api.rs  main.rs  markdown.rs  types.rs
frontend/web-chat/src/components/: chat.rs  collaborate.rs  header.rs  input.rs  login.rs  message.rs  mod.rs  sidebar.rs
infra/: Dockerfile  init.sql
infra/k8s/: 00-namespace.yaml  01-configmap.yaml  02-secret.yaml  03-postgres.yaml  04-api-gateway.yaml  05-ehs-agents.yaml  06-ingress.yaml
proto/: agent.proto
scripts/: run-local.sh  setup-local.sh  setup-native.sh
services/: CODE_SNIPPETS.md  EHS_AGENTS_SUMMARY.md  FILE_MANIFEST.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md
services/api-gateway/: Cargo.toml  build.rs
services/api-gateway/src/: grpc.rs  main.rs  openapi.rs
services/ehs-compliance-agent/: Cargo.toml
services/ehs-compliance-agent/src/: compliance_agent.rs  main.rs
services/ehs-inspection-agent/: Cargo.toml
services/ehs-inspection-agent/src/: inspection_agent.rs  main.rs
services/ehs-permit-agent/: Cargo.toml
services/ehs-permit-agent/src/: main.rs  permit_agent.rs
