[workspace]
resolver = "2"
members = [
    "crates/pekko-agent-core",
    "crates/pekko-agent-llm",
    "crates/pekko-agent-tools",
    "crates/pekko-agent-memory",
    "crates/pekko-agent-orchestrator",
    "crates/pekko-agent-events",
    "crates/pekko-agent-security",
    "services/api-gateway",
    "services/ehs-permit-agent",
    "services/ehs-inspection-agent",
    "services/ehs-compliance-agent",
]
exclude = [
    "frontend/web-chat",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["pekko-agent team"]
license = "MIT"

[workspace.dependencies]
# rust-pekko base crates (path dependencies)
pekko-actor     = { path = "../rust-pekko/pekko-actor" }
pekko-persistence = { path = "../rust-pekko/pekko-persistence" }
pekko-event-bus = { path = "../rust-pekko/pekko-event-bus" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Database — coreDB (embedded Cassandra-style NoSQL)
coredb = { path = "../rust-pekko/coredb" }

# PostgreSQL (EHS 시스템 데이터 조회용)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Kafka — replaced by pekko-event-bus (embedded, no external Kafka required)
# rdkafka = { version = "0.36" }

# Auth & Security
jsonwebtoken = "9"
rustls = "0.23"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.24"
prometheus = "0.13"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
