[package]
name = "pekko-agent-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
redis    = { workspace = true }
sha2     = "0.10"
hex      = "0.4"
serde    = { workspace = true }
serde_json = { workspace = true }
anyhow   = { workspace = true }
tracing  = { workspace = true }
tokio    = { workspace = true }
