[package]
name = "pekko-agent-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pekko-agent-core = { path = "../pekko-agent-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
pekko-actor.workspace = true
pekko-event-bus.workspace = true
