[package]
name = "pekko-agent-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pekko-agent-core = { path = "../pekko-agent-core" }
pekko-agent-events = { path = "../pekko-agent-events" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
pekko-actor.workspace = true
pekko-persistence.workspace = true
pekko-agent-llm   = { path = "../pekko-agent-llm" }
pekko-agent-tools = { path = "../pekko-agent-tools" }
pekko-agent-memory = { path = "../pekko-agent-memory" }
sqlx.workspace = true
futures.workspace = true
