[package]
name = "pekko-agent-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pekko-agent-core = { path = "../pekko-agent-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx    = { workspace = true, optional = true }
sha2    = { version = "0.10", optional = true }
hex     = { version = "0.4",  optional = true }
parking_lot = "0.12"

[features]
postgres = ["sqlx", "sha2", "hex"]
