[package]
name = "pekko-agent-web-chat"
version = "0.1.0"
edition = "2021"
description = "EHS AI Agent 웹 채팅 UI (WASM)"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = { version = "0.6", features = ["json"] }
gloo-timers = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js", "serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlElement",
    "CssStyleDeclaration",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "KeyboardEvent",
    "Window",
    "Document",
    "Element",
    "EventTarget",
] }
log = "0.4"
wasm-logger = "0.2"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
