[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pekko-agent-core = { path = "../../crates/pekko-agent-core" }
pekko-agent-llm = { path = "../../crates/pekko-agent-llm" }
pekko-agent-tools = { path = "../../crates/pekko-agent-tools" }
pekko-agent-memory = { path = "../../crates/pekko-agent-memory" }
pekko-agent-orchestrator = { path = "../../crates/pekko-agent-orchestrator" }
pekko-agent-events = { path = "../../crates/pekko-agent-events" }
pekko-agent-security = { path = "../../crates/pekko-agent-security" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
