[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pekko-agent-core = { path = "../../crates/pekko-agent-core" }
pekko-agent-llm = { path = "../../crates/pekko-agent-llm" }
pekko-agent-tools = { path = "../../crates/pekko-agent-tools" }
pekko-agent-memory = { path = "../../crates/pekko-agent-memory" }
pekko-agent-orchestrator = { path = "../../crates/pekko-agent-orchestrator" }
pekko-agent-events = { path = "../../crates/pekko-agent-events" }
pekko-agent-security = { path = "../../crates/pekko-agent-security" }
pekko-agent-observability = { path = "../../crates/pekko-agent-observability" }
pekko-agent-cache    = { path = "../../crates/pekko-agent-cache" }
pekko-agent-webhooks = { path = "../../crates/pekko-agent-webhooks" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
pekko-actor.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
futures.workspace = true
tonic.workspace = true
prost.workspace = true
tokio-stream = "0.1"
utoipa = { version = "4", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

[build-dependencies]
tonic-build = "0.12"
