[package]
name = "ehs-inspection-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pekko-agent-core = { path = "../../crates/pekko-agent-core" }
pekko-agent-llm = { path = "../../crates/pekko-agent-llm" }
pekko-agent-tools = { path = "../../crates/pekko-agent-tools" }
pekko-agent-memory = { path = "../../crates/pekko-agent-memory" }
pekko-agent-events = { path = "../../crates/pekko-agent-events" }
tokio.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
anyhow.workspace = true
